--- a/shum/css/_header.scss
+++ b/shum/css/_header.scss
@@ -29,3 +29,104 @@
     overflow-y: scroll;
   }
 }
+
+$cubic: cubic-bezier(0.4, 0.01, 0.165, 0.99);
+.burger {
+  position: relative;
+  display: inline-block;
+  height: 30px;
+  width: 30px;
+  cursor: pointer;
+  transform: rotate(0deg);
+  transition: all 0.3s $cubic;
+  user-select: none;
+  -webkit-tap-highlight-color: transparent;
+  #burger {
+      width: 32px;
+      height: 9px;
+      position: relative;
+      display: block;
+      margin: -4px auto 0;
+      top: 50%;
+      .bar {
+          width: 100%;
+          height: 1px;
+          display: block;
+          position: relative;
+          background: $primary;
+          transition: all 0.3s $cubic;
+          transition-delay: 0s;
+          &.topBar {
+              transform: translateY(0px) rotate(0deg);
+          }
+          &.btmBar {
+              transform: translateY(6px) rotate(0deg);
+          }
+      }
+  }
+}
+
+.menu-opened {
+  .burger{
+      transform: rotate(90deg);
+      #burger {
+          .bar {
+              transition: all 0.4s $cubic;
+              transition-delay: 0.2s;
+              &.topBar {
+                  transform: translateY(4px) rotate(45deg);
+              }
+              &.btmBar {
+                  transform: translateY(3px) rotate(-45deg);
+              }
+          }
+      }
+  }
+  & .menu{
+    transform: translateX(0);
+  }
+}
+.menu{
+  position: fixed;
+  z-index: 9;
+  top: 0;right: 0;
+  width: 33.33%;
+  height: 100%;
+  min-width: 300px;
+  display: flex;
+  align-items: center;
+  transform: translateX(101%);
+  // justify-content: center;
+  background-color: $white;
+  transition: 0.6s ease-in-out;
+  &__content{
+    width: 100%;
+  }
+  @include media-breakpoint-down(md) {
+    width: 70%;
+  }
+  @include media-breakpoint-down(sm) {
+    width: 100%;
+  }
+}
+.menuBg{
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 8;
+  background-color: rgba($color: #000000, $alpha: 0.5);
+  transform: translateX(101%);
+
+  transition: 0.6s ease-in-out;
+
+}
+.menu-opened {
+  .menu{
+    transform: translateX(0%);
+  }
+  .menuBg{
+    transform: translateX(0%);
+  }
+}
