--- a/shum/css/_mainPage.scss
+++ b/shum/css/_mainPage.scss
@@ -1,3 +1,9 @@
+
+.mFirstWrap{
+  @include media-breakpoint-up(lg) {
+    height: 300vh;
+  }
+}
 .mFirst{
   min-height: 100vh;
   padding-top: 160px;
@@ -5,6 +11,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
+
   &__main{
     & h1, & h2{
       min-width: 50vw;
@@ -68,8 +75,16 @@
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    & .p1{
+    & .cap{
       margin-left: 3vw;
+      @include media-breakpoint-down(md) {
+        margin-left: 1vw;
+      }
+      @include media-breakpoint-down(sm) {
+        margin-top: 10px;
+        margin-left: 7vw;
+        
+      }
     }
   }
 }
